--- a/public/style.css
+++ b/public/style.css
@@ -26,9 +26,108 @@
     font-style: italic;
 }
 
-h1 {
-    color:red;
-    font-family: 'Linotype';
-    font-weight: normal;
-    font-style: italic;
+/* set up gird  */
+
+.banner {
+    grid-area: header;
 }
+.main {
+    grid-area: main;
+}
+.sidebar {
+    grid-area: sidebar;
+}
+.footer {
+    grid-area: footer;
+}
+.grid-container {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: auto;
+    grid-template-areas: 
+        "header"
+        "main"
+        "sidebar"
+        "footer";
+}
+
+@media screen and (min-width: 768px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: 60% 40%;
+        grid-template-rows: auto;
+        grid-template-areas: 
+            "header header"
+            "main sidebar"
+            "footer footer";
+    }
+}
+@media screen and (min-width: 992px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: 70% 30%;
+        grid-template-rows: auto;
+        grid-template-areas: 
+            "header header"
+            "main sidebar"
+            "footer footer";
+    }
+}
+@media screen and (min-width: 1600px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: 80% 20%;
+        grid-template-rows: auto;
+        grid-template-areas: 
+            "header header"
+            "main sidebar"
+            "footer footer";
+    }
+}
+/* end gird setup */
+
+/* start Gobal CSS */
+
+body {
+    width: 100%;
+    margin: 0;
+}
+p {
+    width: 100%;
+}
+.container{
+    max-width: 100%;
+    padding-right: 19px;
+    padding-left: 19px;
+}
+@media screen and (min-width: 500px) {
+    .container{
+        max-width: 100%;
+        padding-right: 55px;
+        padding-left: 55px;
+    }
+}
+/* end Gobal CSS */
+
+/* start css for HEADER */
+
+/* end css for HEADER */
+
+/* start css for MAIN */
+.main{
+    background-color: white;
+}
+/* end css for MAIN */
+
+/* start css for SIDEBAR */
+.sidebar{
+    background-color: #f2f2f2;
+}
+/* end css for SIDEBAR */
+
+/* start css for FOOTER */
+.footer{
+    background-color: #222222;
+    height: 100%;
+}
+/* end css for FOOTER */
