--- a/public/style.css
+++ b/public/style.css
@@ -102,6 +102,10 @@ h2 {
 p {
     font-size: 16px;
 }
+img {
+    width: 100%;
+    height: auto;
+}
 .container{
     max-width: 100%;
     padding-right: 19px;
@@ -125,6 +129,9 @@ p {
     background-position: center top; 
     background-repeat: no-repeat;
     background-size: cover;
+}
+.brand-wrapper {
+    width: 80px;
 }
 .menu-container {
     position: absolute;
@@ -291,28 +298,29 @@ p {
 /* end css for HEADER */
 
 /* start css for MAIN */
-.main{
+.main {
     background-color: white;
     margin-bottom: 75px;
 }
-h1 {
+.main h1 {
     font-size: 25px;
     line-height: 1.2;
     margin: 34px 0px;
 }
-p {
+.main p {
     font-size: 14px;
 }
 @media screen and (min-width: 768px) {
     .main {
         margin-bottom: 175px;
+        padding-right: 150px;
     }
-    h1 {
+    .main h1 {
         font-size: 60px;
         line-height: 1;
         margin: 45px 0px;
     }
-    p {
+    .main p {
         font-size: 16px;
         margin: 25px 0px;
     }
@@ -322,6 +330,42 @@ p {
 /* start css for SIDEBAR */
 .sidebar{
     background-color: #f2f2f2;
+    padding-bottom: 50px
+}
+.sidebar .image-wrapper {
+    width: 180px;
+    margin: 30px 0;
+}
+.sidebar .image-wrapper img {
+    border-radius: 50%;
+}
+.sidebar h2 {
+    margin: 0;
+}
+.sidebar p {
+    font-size: 14px;
+    margin: 25px 0;
+}
+.sidebar .subtitle {
+    color: #c8c8c8;
+}
+.sidebar button {
+    padding: 10px;
+    border-radius: 25px;
+    border: 1px solid #222222;
+    background-color: #222222;
+    color: white;
+    cursor: pointer;
+}
+@media screen and (min-width: 768px) {
+    .sidebar .sidebar-container{
+        position: sticky;
+        top: 0;
+    }
+    .sidebar .image-wrapper {
+        width: 200px;
+        margin-top: 50px;
+    }
 }
 /* end css for SIDEBAR */
 
